tests/valid/edge_cases/where_before_pass.nyx
// Edge case: function where where clause immediately precedes single pass statement
func single_pass_with_where[T](x: T) -> T
    where
        T: Clone
    pass
